force-app/main/default/objects/Contract_Renewal_Alert__e/Contract_Renewal_Alert__e.object-meta.xml
<CustomObject>
    <description>Publicado quando um contrato está próximo do vencimento. Dispara criação de tarefas de renovação para account owners.</description>
    <label>Contract Renewal Alert</label>
    <pluralLabel>Contract Renewal Alert Events</pluralLabel>
</CustomObject>