force-app/main/default/objects/Contract_Renewal_Alert__e/fields/Contract_Renewal_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal_Id__c</fullName>
    <label>Contract Renewal Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>