force-app/main/default/objects/Contract_Renewal_Alert__e/fields/Days_Until_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Expiration__c</fullName>
    <label>Days Until Expiration</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>